# ExAgent

./: .env.deepseek.local.template  .env.example  .gitignore  .gitleaksignore  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  PRODUCT.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-macos.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  model_catalog.rs  model_metadata.rs  settings.rs  state.rs
apps/desktop/src-tauri/src/provider_auth/: chatgpt.rs  github_copilot.rs  mod.rs  store.rs  types.rs
apps/desktop/src-tauri/tests/: provider_connection.rs  provider_models.rs  provider_oauth.rs  provider_settings.rs  runtime_settings.rs
codex-app-server-reference-pack/: 01-runtime-architecture.md  02-app-server-flow.md  03-key-types-and-ops.md  04-code-map.md  05-adaptation-guide.md  PROMPT_FOR_YOUR_AGENT.md  README.md  code-excerpts.md
codex-app-server-reference-pack/visuals/: app-server-call-canvas.html  app-server-learning.html
docs/: multimodal-input.md
docs/architecture/: 2026-04-15-phase2-agent-design-question-bank.md  2026-04-15-phase2-runtime-bilingual-interview-script.md  2026-04-15-phase2-runtime-code-walkthrough.md  2026-04-15-phase2-runtime-interview-summary.md  2026-04-15-phase2-runtime-question-bank.md  2026-04-15-phase2-runtime-rust-features-notes.md  2026-04-15-phase2-runtime-study-guide.md  2026-04-15-phase2-rust-features-interview-one-pager.md  2026-04-15-phase2-rust-features-mock-interview.md  2026-05-15-exagent-appserver-runtime-boundary-v1-design.md  2026-05-15-exagent-appserver-runtime-boundary-v1-implementation-summary.md  2026-05-16-exagent-thread-runtime-actor-v2-design.md  2026-05-18-exagent-context-projection-layer.md  2026-05-18-exagent-session-centered-agent-architecture.md  2026-05-20-exagent-rollout-persistence-architecture.md  README.md
docs/demo/: exagent-walkthrough.md
docs/plans/: 2026-04-06-rust-phase1-agent-core.md  2026-04-13-exagent-phase2-runtime-design.md  2026-04-13-minimal-api-eval-baseline.md  2026-04-15-exagent-phase2-p0-implementation-plan.md  2026-04-15-exagent-phase3-code-reading-and-test-map.md  2026-04-15-exagent-phase3-concepts-and-boundaries.md  2026-04-15-exagent-phase3-current-state-learning-guide.md  2026-04-15-exagent-phase3-hands-on-filesystem-lab.md  2026-04-15-exagent-phase3-p0-thin-orchestration-implementation-plan.md  2026-04-15-exagent-phase3-p1-status-and-collect-design.md  2026-04-15-exagent-phase3-p1-status-and-collect-implementation-plan.md  2026-04-15-exagent-phase3-p2-structured-review-and-result-contracts-design.md  2026-04-15-exagent-phase3-p2-structured-review-and-result-contracts-implementation-plan.md  2026-04-15-exagent-phase3-roadmap-and-working-model-design.md  2026-04-15-exagent-phase3-runtime-flows-and-persistence-guide.md  2026-04-15-exagent-phase3-step-by-step-code-walkthrough.md  2026-04-15-phase3-session-orchestration-notes.md  2026-04-16-exagent-resume-and-repo-packaging-plan.md  2026-05-15-exagent-appserver-runtime-boundary-v1.md  2026-05-16-exagent-thread-runtime-actor-v2.md  2026-05-17-exagent-live-approval-event-followups.md  2026-05-17-exagent-remove-legacy-agent-execution.md  2026-05-18-exagent-module-rehoming.md  (+7 more)
scripts/: export-public-runtime.sh
src/: agent.rs  api.rs  cli.rs  cli_adapter.rs  config.rs  events.rs  exec_session.rs  lib.rs  main.rs  orchestration.rs  policy.rs  registry.rs  result_contract.rs  runtime.rs  session.rs  transcript.rs  types.rs  workspace.rs  workspace_checkpoint.rs
tests/: agent_loop.rs  anthropic_llm.rs  api_server.rs  app_server_boundary.rs  approval_decision.rs  architecture_guards.rs  cli_adapter.rs  config_defaults.rs  desktop_facade.rs  exec_session.rs  file_tools.rs  gemini_llm.rs  index_db.rs  llm_factory.rs  llm_http.rs  llm_mock.rs  mcp_runtime.rs  memory_app_server.rs  memory_injection.rs  memory_privacy.rs  memory_projection_worker.rs  memory_projector.rs  memory_query_gate.rs  memory_ranker.rs  memory_runtime.rs  memory_safety.rs  memory_schema.rs  memory_tools.rs  model_resolver.rs  module_layout.rs  orchestration.rs  override_policy.rs  policy.rs  registry_dispatch.rs  resume.rs  run_command.rs  runtime_control.rs  structured_contracts.rs  thread_runtime.rs  tool_runtime_architecture.rs  (+2 more)
(+342 files in other folders)
