[package]
name = "exagent"
version = "0.1.0"
edition = "2021"
description = "A Rust agent runtime for the ExAgent desktop workbench, with durable threads, replayable events, and approval-gated tools."
license = "MIT OR Apache-2.0"
repository = "https://github.com/exqqstar/ExAgent"
readme = "README.md"
keywords = ["agent", "runtime", "llm", "tools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
doctest = false

[workspace]
members = [".", "apps/desktop/src-tauri"]
resolver = "2"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
futures-util = "0.3"
globset = "0.4"
htmd = "0.5"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
lru = "0.12"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "1.7.0", default-features = false, features = ["base64", "client", "schemars", "server", "transport-child-process"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "time"] }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
