[package]
name = "exagent-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri desktop shell for the ExAgent runtime."
license = "MIT OR Apache-2.0"
repository = "https://github.com/exqqstar/ExAgent"
publish = false

[lib]
name = "exagent_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
exagent = { path = "../../.." }
keyring = { version = "3.6.3", features = ["apple-native"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
axum = "0.8"
tempfile = "3"
